--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </section>
     <section class="section2">
         <div class="imgdedos"><img src="Images/Fotodedos.png" alt=""></div>
-        <div class="video"><video src="Images/Video Vivinails.mp4" type="video/mp4"></video></div>
+        <div class="video"><video controls src="Images/Video Vivinails.mp4" type="video/mp4"></video></div>
         <div class="text">
             <h2>Sign Up for Exclusive Launch Offers!</h2>
             <button>Sign Up</button>
