--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
 
     </section>
     <footer>
-
+        <div class="logofooter">
+            <img width="80px" height="40px" src="Images/Vivi Nails Logo.png" alt="">
+        </div>
+        <p>©vivinails 2024</p>
     </footer>
 </body>
 </html>
