--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
                     <h1>We Nailed It! Every Detail is a Masterpiece, just like you deserve</h1> <br>
                     <h3>Now introducing home service because self-care starts with pampering your nails</h3>
                 </div>
-                <div class="boton1">
-                    <button>Sign Up</button>
-                </div>
+                <div class="botones">Sign Up</div>
             </div>
             <div class="imageHeader"><img src="Images/Fotomanos.png" alt=""></div>
         </header>
@@ -31,9 +29,8 @@
         <div class="video"><video controls src="Images/Video Vivinails.mp4" type="video/mp4"></video></div>
         <div class="text">
             <h2>Sign Up for Exclusive Launch Offers!</h2>
-            <button>Sign Up</button>
+            <div class="botones">Sign Up</div>
         </div>
-
     </section>
     <footer>
         <div class="logofooter">
@@ -41,5 +38,6 @@
         </div>
         <p>©vivinails 2024</p>
     </footer>
+   
 </body>
 </html>
